--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
+		"barryvdh/laravel-dompdf": "0.4.4",
 		"way/generators": "~2.0"
 	},
 	"autoload": {
