--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 	"require": {
 		"laravel/framework": "4.2.*",
 		"barryvdh/laravel-dompdf": "0.4.4",
+		"maatwebsite/excel": "~1.3",
 		"way/generators": "~2.0"
 	},
 	"autoload": {
